Created hero section page

--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?&family=Lobster&family=Lexend+Deca&family=Quicksand:wght@300..700&display=swap"
+    rel="stylesheet">
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -49,16 +58,32 @@
   <section id="hero-section">
     <div class="container text-center mt-5">
       <!-- Columns are always 50% wide, on mobile and desktop -->
-      <div class="row">
-        <div class="col-sm">Text</div>
-        <div id="svg-group" class="col-sm">
+      <div class="row row-aling-center">
+        <div class="col-sm-6">
+          <!-- <div id="hero-text"> -->
+            <h1 class="h1">Hello I'am <span class="bold-text">Abhishek Chauhan.</span></h1>
+            <h1><span class="tag-text">Sofware Developer Engineer</span></h1>
+            <h1>Based In <span class="bold-text">India.</span></h1>
+            <p id="self-intro">I'am an Experienced Sofware Developer Engineer with over 2+ years of hands-on
+              experiencein
+              designing and implementing scalable and optimized backend and web solutions. Proven track record of
+              delivering high-quality solutions while collaborating effectively within cross-functional teams.
+              Demonstrated expertise in problem-solving and a keen ability to meet and exceed project deadlines. Seeking
+              new challenges to enhance skills further and contribute to the success of dynamic projects in a
+              growth-oriented environment.</p>
+          <!-- </div> -->
+        </div>
+        <div id="svg-group" class="col-sm-4">
           <img src="Group 1000015839.svg" alt="">
         </div>
       </div>
     </div>
   </section>
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <script src="main.js"></script>
 </body>
+
 </html>
