--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
         </div>
       </div>
   </section>
+
+  <section id="experience-section" class="text-center">
+    <h1>My <span id="skills-bold">Experience</span></h1>
+    <div id="exp-card" class="container">
+    </div>
+  </section>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
