--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@
 
   <section id="experience-section" class="text-center">
     <h1>My <span id="skills-bold">Experience</span></h1>
-    <div id="exp-card" class="container">
-      <div id="exp-card-head" class="mt-2"><img id="volansys-img" src="VOLANSYS_logo_white_New.png" alt=""><span id="position-name" class="exp-card-text">Software Developer Engineer</span><span id="work-date" class="exp-card-text">May 2022 - Present</span></div>
-      <div id="exp-card-body" class="mt-3"><p>As a Software Development Engineer at Volansys, I have played a pivotal role in developing sustainable and scalable solutions across multiple projects. With experience spanning over five projects, I have contributed in various capacities, including Front-End, Full-Stack, and Backend Developer roles. I have extensively worked with AWS, implementing a wide range of cloud solutions to enhance efficiency and performance. My experience includes leveraging AWS services such as IOT Core, S3, Lambda, DynamoDB, and more to build and deploy robust applications.</p></div>
+    <div class="exp-card container">
+      <div class="mt-2 exp-card-head"><img src="VOLANSYS_logo_white_New.png" alt="" class="volansys-img"><span class="exp-card-text position-name">Software Developer Engineer</span><span id="work-date" class="exp-card-text">May 2022 - Present</span></div>
+      <div class="mt-3 exp-card-body"><p>As a Software Development Engineer at Volansys, I have played a pivotal role in developing sustainable and scalable solutions across multiple projects. With experience spanning over five projects, I have contributed in various capacities, including Front-End, Full-Stack, and Backend Developer roles. I have extensively worked with AWS, implementing a wide range of cloud solutions to enhance efficiency and performance. My experience includes leveraging AWS services such as IOT Core, S3, Lambda, DynamoDB, and more to build and deploy robust applications.</p></div>
     </div>
-    <div id="exp-card" class="container mt-4">
-      <div id="exp-card-head" class="mt-2"><img id="volansys-img" src="VOLANSYS_logo_white_New.png" alt=""><span id="position-name" class="exp-card-text">Cloud Intern</span><span id="work-date" class="exp-card-text">Jan 2022 - May 2022</span></div>
-      <div id="exp-card-body" class="mt-3"><p>As a Software Development Engineer at Volansys, I have played a pivotal role in developing sustainable and scalable solutions across multiple projects. With experience spanning over five projects, I have contributed in various capacities, including Front-End, Full-Stack, and Backend Developer roles. I have extensively worked with AWS, implementing a wide range of cloud solutions to enhance efficiency and performance. My experience includes leveraging AWS services such as IOT Core, S3, Lambda, DynamoDB, and more to build and deploy robust applications.</p></div>
+    <div class="exp-card container mt-4">
+      <div class="mt-2 exp-card-head"><img src="VOLANSYS_logo_white_New.png" alt="" class="volansys-img"><span class="exp-card-text position-name">Cloud Intern</span><span id="work-date" class="exp-card-text">Jan 2022 - May 2022</span></div>
+      <div class="mt-3 exp-card-body"><p>As a Software Development Engineer at Volansys, I have played a pivotal role in developing sustainable and scalable solutions across multiple projects. With experience spanning over five projects, I have contributed in various capacities, including Front-End, Full-Stack, and Backend Developer roles. I have extensively worked with AWS, implementing a wide range of cloud solutions to enhance efficiency and performance. My experience includes leveraging AWS services such as IOT Core, S3, Lambda, DynamoDB, and more to build and deploy robust applications.</p></div>
     </div>
   </section>
 
