Completed experiance section

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </div>
     <div class="exp-card container mt-4">
       <div class="mt-2 exp-card-head"><img src="VOLANSYS_logo_white_New.png" alt="" class="volansys-img"><span class="exp-card-text position-name">Cloud Intern</span><span id="work-date" class="exp-card-text">Jan 2022 - May 2022</span></div>
-      <div class="mt-3 exp-card-body"><p>As a Software Development Engineer at Volansys, I have played a pivotal role in developing sustainable and scalable solutions across multiple projects. With experience spanning over five projects, I have contributed in various capacities, including Front-End, Full-Stack, and Backend Developer roles. I have extensively worked with AWS, implementing a wide range of cloud solutions to enhance efficiency and performance. My experience includes leveraging AWS services such as IOT Core, S3, Lambda, DynamoDB, and more to build and deploy robust applications.</p></div>
+      <div class="mt-3 exp-card-body"><p>As a Cloud Intern at Volansys, I developed skills in Node.js, React, Angular, and AWS. I applied these skills in a project related to event management, where I built both the UI and backend using React.js and Node.js. I also contributed to smaller projects during my internship, which gave me confidence in understanding how things work in production-level environments. During this period, I explored various technologies such as Swagger, Socket.io, and Django.</p></div>
     </div>
   </section>
 
