--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css2?&family=Lobster&family=Lexend+Deca&family=Quicksand:wght@300..700&display=swap"
     rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -154,6 +155,65 @@
       <div class="mt-2 exp-card-head"><img src="VOLANSYS_logo_white_New.png" alt="" class="volansys-img"><span class="exp-card-text position-name">Cloud Intern</span><span id="work-date" class="exp-card-text">Jan 2022 - May 2022</span></div>
       <div class="mt-3 exp-card-body"><p>As a Cloud Intern at Volansys, I developed skills in Node.js, React, Angular, and AWS. I applied these skills in a project related to event management, where I built both the UI and backend using React.js and Node.js. I also contributed to smaller projects during my internship, which gave me confidence in understanding how things work in production-level environments. During this period, I explored various technologies such as Swagger, Socket.io, and Django.</p></div>
     </div>
+  </section>
+
+  <section id="education-section" class="text-center">
+    <h1>My <span id="skills-bold">Education</span></h1>
+    <div class="container bootdey">
+      <div class="row gutters">
+      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+      <div class="card" id="timeline-body">
+      <div class="card-body">
+      <!-- Timeline start -->
+      <div class="timeline">
+        <div class="timeline-row">
+          <div class="timeline-time">
+            2022
+          </div>
+          <div class="timeline-dot fb-bg"></div>
+          <div class="timeline-content">
+            <h4>B.Tech Computer Science and Technology</h4>
+            <p>Parul Institute of Engineering and Technology</p>
+            <div class="">
+              <span class="badge badge-light">Vadodara, Gujarat</span>
+            </div>
+          </div>
+        </div>
+        <div class="timeline-row">
+          <div class="timeline-time">
+            2018
+          </div>
+          <div class="timeline-dot green-one-bg"></div>
+          <div class="timeline-content green-one">
+            <h4>Higher Secondary School</h4>
+            <p>
+              C. S. Vidya Bharti School
+            </p>
+            <div class="">
+              <span class="badge badge-light">Surat, Gujarat</span>
+            </div>
+          </div>
+        </div>
+        <div class="timeline-row">
+          <div class="timeline-time">
+            2016
+          </div>
+          <div class="timeline-dot green-two-bg"></div>
+          <div class="timeline-content green-two">
+            <h4>Secondary School</h4>
+            <p>C. S. Vidya Bharti School</p>
+            <div>
+              <span class="badge badge-light">Surat, Gujarat</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Timeline end -->
+      </div>
+      </div>
+      </div>
+      </div>
+      </div>
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
