--- a/index.html
+++ b/index.html
@@ -216,6 +216,29 @@
       </div>
   </section>
 
+  <section id="project-section" class="text-center">
+    <h1>My <span id="skills-bold">Projects</span></h1>
+    <div class="project-div">
+      <!-- <div class="project-img">
+        <img src="icons8-settings (1).svg" alt="">
+      </div> -->
+      <div class="project-info">
+        <p class="project-no">01</p>
+        <p class="project-heading">Pollution Detection and Control Air Purifier Device</p>
+        <p class="project-decp">
+          This product is a part of many products owned by american company which manufactures differnt products relarted to health and livings. This product is a multi-functional environmental sensor and controller hub. It's equipped with sensors capable of detecting various pollutants such as carbon dioxide (CO2), formaldehyde (HCHO), volatile organic compounds (VOCs), temperature, particulate matter of sizes PM2.5 and PM10, among others.
+          Once it detects these pollutants in the environment, it displays this information on its screen, providing real-time data about the air quality. Additionally, it has the capability to communicate with and control other air purifiers manufactured by the same company. Based on the pollutant levels detected, it can instruct the connected air purifiers to adjust their operation to effectively purify the air, ensuring a cleaner and healthier indoor environment.
+          In summary, it serves as a central hub for monitoring air quality and managing air purification systems within a space.
+        </p>
+        <svg id="read-more-svg" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M10.8333 9.16658L17.6667 2.33325" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M18.3333 5.66675V1.66675H14.3333" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M9.16667 1.66675H7.5C3.33333 1.66675 1.66667 3.33341 1.66667 7.50008V12.5001C1.66667 16.6667 3.33333 18.3334 7.5 18.3334H12.5C16.6667 18.3334 18.3333 16.6667 18.3333 12.5001V10.8334" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </div>
+    </div>
+  </section>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
