project section completed

--- a/index.html
+++ b/index.html
@@ -474,6 +474,7 @@
             viewBox="0 0 20 20"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
+            onclick="fillTabel('sensor')"
           >
             <path
               d="M10.8333 9.16658L17.6667 2.33325"
@@ -523,6 +524,7 @@
             viewBox="0 0 20 20"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
+            onclick="fillTabel('air')"
           >
             <path
               d="M10.8333 9.16658L17.6667 2.33325"
@@ -570,6 +572,7 @@
             viewBox="0 0 20 20"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
+            onclick="fillTabel('water')"
           >
             <path
               d="M10.8333 9.16658L17.6667 2.33325"
@@ -617,6 +620,7 @@
             viewBox="0 0 20 20"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
+            onclick="fillTabel('pepsico')"
           >
             <path
               d="M10.8333 9.16658L17.6667 2.33325"
@@ -646,8 +650,8 @@
         <div class="project-info">
           <p class="project-heading">Let's Talk</p>
           <p class="project-decp">
-            Its is a One to One video calling web application which can be use
-            to making video calls.
+            LetsTalk is a web application for one-on-one video conversation. To video chat, one can either create or join a room. I
+used agora sdk for signaling here
           </p>
           <svg
             data-bs-toggle="modal"
@@ -658,6 +662,7 @@
             viewBox="0 0 20 20"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
+            onclick="fillTabel('letstalk')"
           >
             <path
               d="M10.8333 9.16658L17.6667 2.33325"
@@ -687,8 +692,7 @@
         <div class="project-info">
           <p class="project-heading">Manage Dice</p>
           <p class="project-decp">
-            ManageDice is an Event Management service provider, user can book
-            event through this portal including event packages.
+            Manage Dice is an event planning and management online platform that helps people to get all the event-related services in one place. All the requirements of the customer are done by Manage Dice. Customers will get all the services of an Event in one place. Timeline of all the event planning processes. Providing package selection with customization.
           </p>
           <svg
             data-bs-toggle="modal"
@@ -699,6 +703,7 @@
             viewBox="0 0 20 20"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
+            onclick="fillTabel('manageDice')"
           >
             <path
               d="M10.8333 9.16658L17.6667 2.33325"
@@ -741,6 +746,7 @@
             viewBox="0 0 20 20"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
+            onclick="fillTabel('management')"
           >
             <path
               d="M10.8333 9.16658L17.6667 2.33325"
@@ -779,7 +785,7 @@
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">My Contribution</h5>
+            <h5 class="modal-title" id="exampleModalLabel">Details</h5>
             <button
               type="button"
               class="btn-close"
