added download function, footer added

--- a/index.html
+++ b/index.html
@@ -40,19 +40,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Skills</a>
+              <a class="nav-link" aria-current="page" href="#hero-section">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projects</a>
+              <a class="nav-link" aria-current="page" href="#skills-section">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Experiance</a>
+              <a class="nav-link" href="#experience-section">Experiance</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Me</a>
+              <a class="nav-link" href="#education-section">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#project-section">Projects</a>
             </li>
           </ul>
-          <button type="button" class="resume-btn">
+          <button type="button" class="resume-btn" onclick="downloadFile()">
             <p class="text">Resume</p>
             <svg
               width="24"
@@ -773,6 +776,11 @@ used agora sdk for signaling here
         </div>
       </div>
     </section>
+
+    <footer>
+      <p>Made with ❤️ by @Abhishek</p>
+      <p>May 2024</p>
+    </footer>
 
     <!-- Modal -->
     <div
