corrected the grammer

--- a/index.html
+++ b/index.html
@@ -93,15 +93,7 @@
             <h1><span class="tag-text">Sofware Developer Engineer</span></h1>
             <h1>Based In <span class="bold-text">India.</span></h1>
             <p id="self-intro">
-              I'am an Experienced Sofware Developer Engineer with over 2+ years
-              of hands-on experiencein designing and implementing scalable and
-              optimized backend and web solutions. Proven track record of
-              delivering high-quality solutions while collaborating effectively
-              within cross-functional teams. Demonstrated expertise in
-              problem-solving and a keen ability to meet and exceed project
-              deadlines. Seeking new challenges to enhance skills further and
-              contribute to the success of dynamic projects in a growth-oriented
-              environment.
+              I am an experienced Software Development Engineer with over 2 years of hands-on experience in designing and implementing scalable and optimized backend and web solutions. I have a proven track record of delivering high-quality solutions while collaborating effectively within cross-functional teams. I possess demonstrated expertise in problem-solving and have a keen ability to meet and exceed project deadlines. I am seeking new challenges to further enhance my skills and contribute to the success of dynamic projects in a growth-oriented environment.
             </p>
             <div class="container" id="social-link">
               <a
@@ -451,22 +443,7 @@
             Pollution Detection and Control Air Purifier Device
           </p>
           <p class="project-decp">
-            This product is a part of many products owned by american company
-            which manufactures differnt products relarted to health and livings.
-            This product is a multi-functional environmental sensor and
-            controller hub. It's equipped with sensors capable of detecting
-            various pollutants such as carbon dioxide (CO2), formaldehyde
-            (HCHO), volatile organic compounds (VOCs), temperature, particulate
-            matter of sizes PM2.5 and PM10, among others. Once it detects these
-            pollutants in the environment, it displays this information on its
-            screen, providing real-time data about the air quality.
-            Additionally, it has the capability to communicate with and control
-            other air purifiers manufactured by the same company. Based on the
-            pollutant levels detected, it can instruct the connected air
-            purifiers to adjust their operation to effectively purify the air,
-            ensuring a cleaner and healthier indoor environment. In summary, it
-            serves as a central hub for monitoring air quality and managing air
-            purification systems within a space.
+            This product is one of many owned by an American company that manufactures various health and lifestyle-related products. It is a multi-functional environmental sensor and controller hub equipped with sensors capable of detecting pollutants such as carbon dioxide (CO2), formaldehyde (HCHO), volatile organic compounds (VOCs), temperature, and particulate matter of sizes PM2.5 and PM10, among others. Once these pollutants are detected, the product displays the information on its screen, providing real-time data about air quality. Additionally, it can communicate with and control other air purifiers manufactured by the same company. Based on the detected pollutant levels, it can instruct connected air purifiers to adjust their operation, effectively purifying the air and ensuring a cleaner and healthier indoor environment. In summary, it serves as a central hub for monitoring air quality and managing air purification systems within a space.
           </p>
           <svg
             data-bs-toggle="modal"
@@ -507,16 +484,7 @@
         <div class="project-info">
           <p class="project-heading">Smart Air Purifier</p>
           <p class="project-decp">
-            The Air Purifier utilizes the IoT core MQTT protocol to establish a
-            connection with the cloud. The online portal includes features such
-            as an inventory and device list, over-the-air (OTA) updates,
-            detailed information for each Purifier, a user list indicating
-            device usage, an administrator list for portal management, and a
-            dashboard showing the global device count with color-coded
-            indicators highlighting spots based on air quality. Provisioning can
-            be carried out through a mobile app, offering the same
-            functionalities. Additionally, users receive notifications on their
-            mobile app regarding filter resets and other specified conditions.
+            The Air Purifier utilizes the IoT core MQTT protocol to establish a connection with the cloud. The online portal includes features such as an inventory and device list, over-the-air (OTA) updates, detailed information for each purifier, a user list indicating device usage, an administrator list for portal management, and a dashboard showing the global device count with color-coded indicators highlighting spots based on air quality. Provisioning can be carried out through a mobile app, offering the same functionalities. Additionally, users receive notifications on their mobile app regarding filter resets and other specified conditions.
           </p>
           <svg
             data-bs-toggle="modal"
@@ -557,14 +525,7 @@
         <div class="project-info">
           <p class="project-heading">Smart Water Purifier</p>
           <p class="project-decp">
-            The Water Purifier uses the IoT core MQTT protocol to connect to the
-            cloud. The online portal featured an inventory and device list page,
-            an OTA page, a device detail page for every purifier, a list of
-            users using the devices, a list of administrators managing the
-            portal, and a dashboard displaying the total number of devices
-            worldwide. Using the same features, provisioning was enabled via a
-            mobile app. Also, users get Notifications on their mobile
-            application to Reset their Filters and other specified conditions.
+            The Water Purifier uses the IoT core MQTT protocol to connect to the cloud. The online portal features an inventory and device list page, an OTA update page, a device detail page for every purifier, a list of users using the devices, a list of administrators managing the portal, and a dashboard displaying the total number of devices worldwide. Provisioning can also be done via a mobile app, offering the same features. Additionally, users receive notifications on their mobile app to reset their filters and for other specified conditions.
           </p>
           <svg
             data-bs-toggle="modal"
@@ -607,12 +568,7 @@
             Serially Communicated Dispensing Application
           </p>
           <p class="project-decp">
-            The Serially Communicated dispensing application is made by
-            softdrink giant company this allows customers to choose and pour
-            their preferred flavors from various available drinks. Web socket
-            and serial port communication were used to enable device
-            communication. Upon pouring, a code would be sent to the associated
-            controller via the serial port, enabling the pouring procedure.
+            The serially communicated dispensing application is made by a soft drink giant company. It allows customers to choose and pour their preferred flavors from various available drinks. Websocket and serial port communication are used to enable device communication. Upon pouring, a code is sent to the associated controller via the serial port, initiating the pouring procedure.
           </p>
           <svg
             data-bs-toggle="modal"
